2008-09-21  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: set GtkAdjustment page size to 0 to avoid
	problems due to newly enforced value boundaries in GTK+ 2.14.  See
	bug #551740 for a description of the problem.

2008-09-18  Jens Granseuer  <jensgr@gmx.net>

	* theme-save.c: (write_theme_to_disk): don't fail if the destination
	files already exist and the user tries to overwrite them (bug #552671)

2008-08-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (create_thumbnail),
	(prepare_list): when a hidden theme is selected, and therefore
	becomes visible, create a thumbnail for it (bug #547301)

2008-08-14  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: remove help button as long as we don't have
	any help to show (bug #473181)

2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (prepare_list): when
	adding an unknown theme to the list because it has been selected use
	the corresponding default icon to represent it

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-themes.c: (theme_drag_data_received_cb):
	* theme-installer.c: (gnome_theme_install),
	(gnome_theme_installer_run):
	* theme-installer.h: make theme installation from GIO-supported
	sources work (including drag and drop) (bug #545335)

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): file transfer
	dialog now uses GFiles internally, so update the caller

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-installer.c (cleanup_tmp_dir):
	* theme-util.c (theme_delete): Fix build for the previous change

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-util.c:
	* theme-util.h: Remove the directory deletion helpers, and
	move them to the common sub-directory

2008-07-20  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): don't delete ~/.icons when deleting